styles/styles.css
/* Color reference:
 *
 * Primary text: #000000
 * Secondary text: #444444
 * Primary divider: #AAAAAA
 * Secondary divider: #DEDEDE
 * Primary background: #FFFFFF
 * Secondary background: 50% #F2F2F2 (disabled)
 * Highlight: #F2F2F2
 * Link: #8B0000
 */

/* Begin global styles */

/* Default HTML */
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

button::-moz-focus-inner,
a::-moz-focus-inner {
  border: 0;
}

body {
  margin: 0;
  overflow: hidden;

  background-color: #FFFFFF;
  color: #000000;
}

h1, h2 {
  margin: 0;
  padding: 0;
  font-weight: initial;
  font-family: initial;
  
  color: #000000;
}

i {
  color: #444444;
}

a {
  color: #8B0000;
  text-decoration: none;
}

a:hover,
a:focus {
  text-decoration: underline;
}

#controls button:focus,
div:focus,
#footer a:focus {
  outline: none;
}

/* Main content of all pages */
#content {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 50px; /* page footer */

  overflow-y: scroll;
  overflow-x: hidden;
}

/* Footer on all pages */
#footer {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 50px;

  color: #000000;

  box-shadow: 0px -2px 10px #AAAAAA;

  z-index: 2;
}

/* Footer navigation links */
#footer a {
  float: left;
  position: relative;
  width: calc(100% / 6);
  height: 100%;

  display: block;

  color: #000000;
  text-decoration: none;
  text-align: center;
  font-size: 18px;
  line-height: 36px;
  text-transform: capitalize;
}

#footer a.active {
  color: #8B0000;
  pointer-events: none;
}

#footer a:not(.active):hover,
#footer a:not(.active):focus {
  background-color: #F2F2F2;
}

/* Footer word of the moment */
#footer #word {
  position: absolute;
  left: 0;

  padding-left: 15px;

  text-decoration: none;
  font-size: 16px;
  line-height: 32px;
}

#footer #word a {
  float: none;
  width: auto;
  height: auto;

  display: inline;

  color: #8B0000;

  text-decoration: none;
  text-transform: none;
  text-align: left;
  font-size: initial;
  line-height: initial;
  font-weight: normal;
}

#footer #word a:hover {
  text-decoration: underline;
  background: none;
}

/* Footer copyright notice */
#footer #copyright {
  position: absolute;
  right: 0;

  padding-right: 15px;

  text-decoration: none;
  font-size: 16px;
  line-height: 32px;
  letter-spacing: 1px;
}

/* End global styles */



/* Begin portal panels */

.portal {
  position: relative;
  float: left;
  height: 100%;
  width: calc(100% / 6);

  text-align: center;
  font-size: 20px;
}

/* Divider */
.portal:after {
  content:'';

  position: absolute;
  top: 5%;
  right: 0;

  width: 1px;
  height: 90%;

  background-color: #AAAAAA;
}

.portal .heading {
  position: relative;
  left: 0;
  right: 0;
  top: 45%;
}

.portal a {
  position: absolute;
  width: 100%;
  height: 100%;

  display: block;
  z-index: 1;
}

/* End portal panels */



/* Begin post panels */

.post {
  position: relative;
  height: 50px;

  margin: 0 100px;
  overflow: hidden;

  border-bottom: 1px solid #AAAAAA;

  font-family: Times;

  transition: height 0.3s ease 0s;

  z-index: 1;
}

.post.active {
  height: 100%;
}

/* Heading container */
.post .heading {
  min-height: 50px;
  margin: 0;
  padding: 10px 30px 10px 20px;

  /* Subtitle font (for ellipsis) */
  color: #444444;
  font-size: 14px;
  line-height: 18px;

  white-space: nowrap;
  overflow-x: hidden;
  overflow-y: auto;
  text-overflow: ellipsis;
}

.post .heading > * {
  pointer-events: none;
}

.post.active .heading {
  white-space: normal;
  border-bottom: 1px solid #DEDEDE;
}

/* Title font */
.post .title {
  margin-right: 10px;

  color: #000000;
  font-size: 20px;
  line-height: 29px;
}

.post.active .title {
  display: block;
  margin-bottom: 10px;
}

/* Hover/focus state */
.post:not(.active):hover,
.post:not(.active):focus {
  background-color: #F2F2F2;
}

.post .heading:hover {
  cursor: pointer;
}

/* Expand arrow */
.post .heading:after {
  content: "";

  position: absolute;
  right: 15px;
  top: 15px;
  width: 10px;
  height: 10px;

  border-radius: 2px;

  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);

  transition: top 0.3s linear 0s, transform 0.3s linear 0s;
}

.post .heading:hover:after {
  border-right: 2px solid #AAAAAA;
  border-bottom: 2px solid #AAAAAA;
}

.post.active .heading:after {
  top: 20px;
  border-right: 2px solid #AAAAAA;
  border-bottom: 2px solid #AAAAAA;

  -ms-transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

/* Permalink unchanging header */
.post .heading.static {
  pointer-events: none;
}

.post .heading.static:after {
  border: none;
}

/* Content container */
.post .body {
  position: absolute;
  top: 50px; /* post heading, adjusted dynamically */
  bottom: 0;
  left: 0;
  right: 0;

  overflow: hidden;
}

.post:not(.active) .body {
  display: none;
}

.post .body .content {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 25px; /* footer */
  padding: 0 20px;

  overflow-y: scroll;
  overflow-x: hidden;
}

.post .body .footer {
  position: absolute;
  bottom: 0;
  padding: 5px 10px;
  height: 25px;
  width: 100%;
  
  border-top: 1px solid #DEDEDE;

  font-size: 11px;
}

.post .body .footer .date {
  float: right;
  text-align: right;
}

/* End post panels */


/* Begin control buttons */

#controls {
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;
}

.control {
  position: absolute;
  width: 50px;
  height: 50px;

  padding: 0;

  border: 1px solid #AAAAAA;
  border-radius: 50%;
  background-color: #FFFFFF;

  cursor: pointer;

  z-index: 1;
}

.control:not(:disabled):hover,
.control:not(:disabled):focus {
  background-color: #F2F2F2;
}

.control:disabled {
  opacity: 0.5;

  background-color: #F2F2F2;

  cursor: default;
}

/* To previous page */
.control.prev {
  left: 25px;
  top: 15px;
}

.control.prev:after {
  content: "";

  position: relative;
  left: calc(50% - 6px);
  width: 20px;
  height: 20px;
  display: block;

  border-top: 2px solid #AAAAAA;
  border-left: 2px solid #AAAAAA;
  border-radius: 2px;

  -ms-transform: scaleY(0.7) rotate(-45deg);
  -webkit-transform: scaleY(0.7) rotate(-45deg);
  transform: scaleY(0.7) rotate(-45deg);
}

/* To next page */
.control.next {
  right: 25px;
  top: 15px;
}

.control.next:after {
  content: "";

  position: relative;
  left: calc(50% - 16px);
  width: 20px;
  height: 20px;
  display: block;

  border-top: 2px solid #AAAAAA;
  border-right: 2px solid #AAAAAA;
  border-radius: 2px;

  -ms-transform: scaleY(0.7) rotate(45deg);
  -webkit-transform: scaleY(0.7) rotate(45deg);
  transform: scaleY(0.7) rotate(45deg);
}

/* Expand all */
.control.expand {
  right: 25px;
  top: 80px;
}

.control.expand:before {
  content: "";

  position: relative;
  left: calc(50% - 1px);
  top: 1px;
  width: 0;
  height: 20px;
  display: block;

  border-left: 2px solid #AAAAAA;
}

.control.expand:after {
  content: "";

  position: relative;
  left: calc(50% - 10px);
  top: -9px;
  width: 20px;
  height: 0;
  display: block;

  border-top: 2px solid #AAAAAA;
}

/* Collapse all */
.control.collapse {
  right: 25px;
  top: 145px;
}

.control.collapse:after {
  content: "";

  position: relative;
  left: calc(50% - 10px);
  top: 1px;
  width: 20px;
  height: 0;
  display: block;

  border-top: 2px solid #AAAAAA;
}

.control.theme {
  bottom: 75px;
  left: 25px;
}

/* Crescent moon to switch to dark theme */
.control.theme:after {
  content: '';

  position: absolute;
  top: 2px;
  left: 3px;
  height: 30px;
  width: 30px;

  border-radius: 50%;

  box-shadow: 6px 6px 0 #AAAAAA;
}

/* End control buttons */

/* Begin images */

/* Image container */
.gallery {
  width: 100%;

  text-align: center;
  font-size: 10px;

  margin: 20px 0;
}

.gallery a {
  display: inline-block;
}

.gallery a:hover,
.gallery a:focus {
  text-decoration: none;
}

/* Image overlay (no dark theme) */
#image-overlay {
  display: none;

  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  overflow: hidden;

  background-color: rgba(0, 0, 0, 0.85);

  z-index: 3;
}

#image-overlay.active {
  display: block;
}

#image-display {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 120px; /* Thumbnail container */
}

#image-display .close {
  position: absolute;
  top: 10px;
  right: 10px;

  width: 24px;
  height: 24px;

  border: 1px solid #AAAAAA;
  border-radius: 12px;

  background-color: transparent;

  padding: 0;

  cursor: pointer;

  transform: rotate(45deg);
}

#image-display .close:before {
  content: "";

  position: relative;
  left: calc(50% - 1px);
  top: 1px;
  width: 0;
  height: 10px;
  display: block;

  border-left: 2px solid #AAAAAA;
}

#image-display .close:after {
  content: "";

  position: relative;
  left: calc(50% - 5px);
  top: -5px;
  width: 10px;
  height: 0;
  display: block;

  border-top: 2px solid #AAAAAA;
}

#image-display .close:hover {
  background-color: #303030;
}

#image-container img {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

  max-height: 90%;
  max-width: 90%;
}

#image-thumbnail-container {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 120px;
}

#image-thumbnails {
  position: absolute;
  left: 25px; /* prev-page button */
  right: 25px; /* next-page button */
  top: 0;
  bottom: 0;

  text-align: center;

  white-space: nowrap;
  overflow-x: auto;
}

#image-thumbnails .thumbnail {
  width: 90px;
  height: 90px;

  margin: 5px;
  padding: 0;

  border: 2px solid transparent;
  background: none;

  vertical-align: middle;
}

#image-thumbnails .thumbnail.active {
  border-color: #8B0000;
}

#image-thumbnails .thumbnail img {
  max-width: 86px;
  max-height: 86px;
}

/* End images */

/* Begin page buttons */

.prev-page {
  position: absolute;
  left: 0;

  height: 100%;
  width: 25px;

  border: 0;
}

.prev-page:before {
  content: '<';
}

.next-page {
  position: absolute;
  right: 0;

  height: 100%;
  width: 25px;

  border: 0;
}

.next-page:after {
  content: '>';
}

/* End page buttons */

/* Begin chapter view */

.chapters-container {
  display: table;

  position: absolute;
  top: 5%;
  left: 0;

  width: 100%;
  height: 90%;
}

.chapters-control {
  display: table-row;
  text-align: center;
}

.chapters-input {
  display: inline-block;
  width: 4ch;

  text-align: right;
}

.chapters-frame {
  display: table-row;
  height: 100%;

  position: relative;
}

.chapters-content {
  position: absolute;
  left: 25px; /* prev-page button */
  right: 25px; /* next-page button */

  height: 100%;

  padding: 0 20px;
  margin: 0 5px;

  overflow-y: auto;
}

.chapters,
.chapter {
  display: none;
}

/* End chapter view */

